# cv-match-project

./: .gitignore  README.md  pyproject.toml  setup.py
src/: pipeline.py
src/helpers/: __init__.py  anonymizers.py  docx_reader.py  filter_ner.py  string_ops.py
src/models/: __init__.py  embedding_generator.py  language_detector.py  ner_models.py
src/tests/: test_ner_models.py
